feat: add admin settings page to configure buckets
